--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "react-icons": "^5.1.0"
   }
 }
