--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^8.3.1",
     "nodemon": "^3.1.0",
     "react-icons": "^5.1.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.6.0"
   }
 }
