--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
-    "nodemon": "^3.1.0",
-    "react-icons": "^5.1.0"
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.6.0"
